rest http service to create user finished

--- a/users/.env
+++ b/users/.env
@@ -1,2 +1,4 @@
 PORT=5235
 BASE_URL=/mc-users/v1/
+MONGO_CNN=mongodb+srv://jhony:seoawuhfndulshdhsasd@cluster0.8i0r3.mongodb.net/myFirstDatabase?authSource=admin&replicaSet=Cluster0-shard-0&w=majority&readPreference=primary&appname=MongoDB%20Compass&retryWrites=true&ssl=true
+MONGO_DB_NAME=tes-mc-services
